Added link to auto ria's website. It's the only requirement for using their API.

--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <footer>
+      Powered with data from <a href="https://auto.ria.com">Auto Ria</a>
+    </footer>
   </body>
 </html>
